Stop floating image appearing behind CTA
On tablets, news images are floated right, and text is expected to wrap
around them. However the “Call to action” block has a grey background
and covers the full width, this obscures the image and looks broken.

This only happens if the CTA is near the top of the article.
Example:
https://www.gov.uk/government/news/new-public-sector-boost-for-uk-steel

--- a/app/assets/stylesheets/frontend/helpers/_govspeak.scss
+++ b/app/assets/stylesheets/frontend/helpers/_govspeak.scss
@@ -238,10 +238,22 @@
     background: $panel-colour none no-repeat 98% $gutter-two-thirds;
     padding: $gutter-one-third ($gutter*2) $gutter-one-third $gutter-half;
     position: relative;
+
+    // `lead-image-sidebar` is floated right on tablets
+    // When floated it appears behind the grey box
+    @include media(tablet) {
+      display: inline-block;
+    }
+
+    &:first-child {
+      margin-top: $gutter-one-third;
+    }
+
     p {
       margin: 0;
       padding: 0;
     }
+
     ol {
       @include media(desktop) {
         list-style-position: outside;
